--- a/applications/marketing/assets/css/app.css
+++ b/applications/marketing/assets/css/app.css
@@ -13,7 +13,6 @@ body {
 }
 
 .header {
-  border-bottom: 1px solid #e1e1e1;
   margin-bottom: 0;
 }
 
@@ -24,6 +23,8 @@ body {
 
 .white-waves {
   background-image: url("/images/white-waves.png");
+  border-bottom: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .callout {
@@ -86,4 +87,55 @@ body {
 
 .email__form [type="submit"] {
   margin-left: 8px;
+}
+
+.swarm-what {
+  margin-top: 64px;
+  margin-bottom: 64px;
+  padding: 0 80px;
+  text-align: center;
+}
+
+.swarm-what__heading {
+  font-size: 32px;
+  font-weight: 600;
+  margin-bottom: 8px;
+}
+
+.swarm-what__body {
+  font-size: 24px;
+}
+
+.swarm-how {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+
+.swarm-how__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 16px;
+}
+
+.swarm-how__heading {
+  color: #242424;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.swarm-how__image {
+  padding: 16px;
+}
+
+.footer {
+  align-items: flex-end;
+  background-image: url("/images/white-waves.png");
+  border-top: 1px solid #e1e1e1;
+  display: flex;
+  height: 120px;
+  margin-top: -8px;
+  padding: 16px;
 }
