--- a/applications/marketing/assets/css/app.css
+++ b/applications/marketing/assets/css/app.css
@@ -89,44 +89,44 @@ body {
   margin-left: 8px;
 }
 
-.tracker-what {
+.upconf-what {
   margin-top: 64px;
   margin-bottom: 64px;
   padding: 0 80px;
   text-align: center;
 }
 
-.tracker-what__heading {
+.upconf-what__heading {
   font-size: 32px;
   font-weight: 600;
   margin-bottom: 8px;
 }
 
-.tracker-what__body {
+.upconf-what__body {
   font-size: 24px;
 }
 
-.tracker-how {
+.upconf-how {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-bottom: 16px;
   margin-top: 16px;
 }
 
-.tracker-how__content {
+.upconf-how__content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 16px;
 }
 
-.tracker-how__heading {
+.upconf-how__heading {
   color: #242424;
   font-size: 24px;
   font-weight: 600;
 }
 
-.tracker-how__image {
+.upconf-how__image {
   padding: 16px;
 }
 
