--- a/applications/web/src/App.css
+++ b/applications/web/src/App.css
@@ -1,33 +1,21 @@
 .App {
-  text-align: center;
+  margin: 0 auto;
+  width: 800px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App__Signout span:first-of-type {
+  margin-right: 8px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App__Signout span:last-of-type {
+  color: #0000ff;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+h3 {
+  margin-bottom: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="submit"] {
+  margin-left: 8px;
 }
