--- a/applications/web/src/AppContainer.css
+++ b/applications/web/src/AppContainer.css
@@ -3,7 +3,7 @@
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
-.App {
+.AppContainer {
   margin: 0 auto;
   width: 800px;
 }
